WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89747
[Qt] Fix the remote inspector loading problems on Mac
https://bugs.webkit.org/show_bug.cgi?id=89747
Summary
[Qt] Fix the remote inspector loading problems on Mac
Jocelyn Turcotte
Reported
2012-06-22 00:49:38 PDT
[Qt] Fix the remote inspector loading problems on Mac
Attachments
Patch
(8.16 KB, patch)
2012-06-22 01:00 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-06-22 01:00:24 PDT
Created
attachment 148977
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-22 06:24:47 PDT
Comment on
attachment 148977
[details]
Patch Clearing flags on attachment: 148977 Committed
r121020
: <
http://trac.webkit.org/changeset/121020
>
WebKit Review Bot
Comment 3
2012-06-22 06:24:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug